[package]
name = "short_url"
version = "1.0.0"
authors = ["Tyler Hill <tyhi@tyhi.rs>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/tyhi/short_url-rs"
description = "A port of the short_url package in python for Rust"
homepage = "https://github.com/tyhi/short_url-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
